# testflow

./: .gitignore  README.md  run.sh
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  prompts.py
backend/app/api/: agents.py  project_archives.py  project_test_cases.py
backend/app/lib/xmind2testcase/: parser.py  utils.py  writer.py
backend/app/models/: __init__.py  project.py  requirement.py  test_case_archive.py  testcase.py
backend/app/services/: agent_service_real.py
backend/app/utils/: init_data.py
frontend/: .env.production  components.d.ts
frontend/src/: style.css
frontend/src/api/: agent.ts  aiModel.ts  archive.ts  auth.ts  index.ts  module.ts  project.ts  requirement.ts  settings.ts  testData.ts
frontend/src/components/module/: GeneratePointsDialog.vue  RequirementDocs.vue  TestCases.vue
frontend/src/components/project/: ModuleList.vue  ProjectArchives.vue  ProjectTestCases.vue
frontend/src/router/: index.ts
frontend/src/views/: AgentConfig.vue  Dashboard.vue  Settings.vue
frontend/src/views/archive/: ArchiveDetail.vue
frontend/src/views/auth/: Login.vue
frontend/src/views/module/: ModuleDetail.vue
frontend/src/views/project/: ProjectDetailNew.vue
