[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.2.1",
    "alembic>=1.13.2",
    "bcrypt>=4.0.1,<5.0.0",
    "black==23.12.1",
    "fastapi[all]>=0.116.1",
    "flake8==6.1.0",
    "httpx>=0.27.0",
    "isort==5.13.2",
    "jieba>=0.42.1",
    "loguru>=0.7.2",
    "openpyxl>=3.1.2",
    "pandas>=2.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.6.4",
    "pypdf2>=3.0.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.25",
    "xmind>=1.2.0",
]
